--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "postcss-critical-split": "^2.5.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "svg4everybody": "^2.1.8",
     "webpack": "^3.0.0",
     "webpack2-polyfill-plugin": "0.0.2"
